// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/MoreDirectChannels should exclude deleted users if there is not direct channel between users 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="none"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      aria-labelledby="genericModalLabel"
      aria-modal="true"
      class="fade in modal"
      id="moreDmModal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="GenericModal__location--top a11y__modal GenericModal GenericModal__compassDesign a11y__modal more-modal more-direct-channels more-direct-channels-generic-modal modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="GenericModal__wrapper GenericModal__wrapper-enter-key-press-catcher"
          >
            <div
              class="modal-header"
            >
              <div
                class="GenericModal__header__text_container"
              >
                <div
                  class="GenericModal__header"
                >
                  <h1
                    class="modal-title"
                    id="genericModalLabel"
                  >
                    Direct Messages
                  </h1>
                </div>
              </div>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
                <span
                  class="sr-only"
                >
                  Close
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="GenericModal__body"
              >
                <div
                  role="application"
                >
                  <div
                    class="filtered-user-list"
                  >
                    <div
                      class="filter-row"
                    >
                      <div
                        class="multi-select__container react-select"
                      >
                        <div
                          class="css-1dedlln"
                          id="selectItems"
                        >
                          <span
                            class="css-1f43avz-a11yText-A11yText"
                            id="react-select-12-live-region"
                          />
                          <span
                            aria-atomic="false"
                            aria-live="polite"
                            aria-relevant="additions text"
                            class="css-1f43avz-a11yText-A11yText"
                            role="log"
                          />
                          <div
                            class="react-select-auto react-select__control css-13cymwt-control"
                          >
                            <div
                              class="react-select-auto react-select__value-container react-select-auto react-select__value-container--is-multi css-hlgwow"
                            >
                              <div
                                class="react-select-auto react-select__placeholder css-1jqq78o-placeholder"
                                id="react-select-12-placeholder"
                              >
                                Search for people
                              </div>
                              <div
                                class="react-select-auto react-select__input-container css-19bb58m"
                                data-value=""
                              >
                                <input
                                  aria-activedescendant=""
                                  aria-autocomplete="list"
                                  aria-describedby="react-select-12-placeholder"
                                  aria-expanded="false"
                                  aria-haspopup="true"
                                  aria-invalid="false"
                                  aria-label="Search for people"
                                  autocapitalize="none"
                                  autocomplete="off"
                                  autocorrect="off"
                                  class="react-select-auto react-select__input"
                                  id="react-select-12-input"
                                  role="combobox"
                                  spellcheck="false"
                                  style="color: inherit; background: 0px; opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                                  tabindex="0"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                        <button
                          class="btn btn-primary"
                          data-testid="saveSetting"
                          id="saveItems"
                          type="submit"
                        >
                          <span>
                            Go
                          </span>
                        </button>
                      </div>
                      <div
                        class="multi-select__help"
                        id="multiSelectHelpMemberInfo"
                      >
                        Use ↑↓ to browse, ↵ to select. You can add 7 more people. 
                        2 of 3 members
                      </div>
                    </div>
                    <div
                      aria-live="polite"
                      class="multi-select__wrapper"
                    >
                      <div
                        aria-hidden="true"
                      >
                        <div
                          class="loading-screen"
                          style="position: absolute;"
                        >
                          <div
                            class="loading__content"
                          >
                            <p>
                              Loading
                            </p>
                            <div
                              class="round round-1"
                            />
                            <div
                              class="round round-2"
                            />
                            <div
                              class="round round-3"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="multi-select__help"
                      id="multiSelectMessageNote"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`components/MoreDirectChannels should match snapshot 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="none"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      aria-labelledby="genericModalLabel"
      aria-modal="true"
      class="fade in modal"
      id="moreDmModal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="GenericModal__location--top a11y__modal GenericModal GenericModal__compassDesign a11y__modal more-modal more-direct-channels more-direct-channels-generic-modal modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="GenericModal__wrapper GenericModal__wrapper-enter-key-press-catcher"
          >
            <div
              class="modal-header"
            >
              <div
                class="GenericModal__header__text_container"
              >
                <div
                  class="GenericModal__header"
                >
                  <h1
                    class="modal-title"
                    id="genericModalLabel"
                  >
                    Direct Messages
                  </h1>
                </div>
              </div>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
                <span
                  class="sr-only"
                >
                  Close
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="GenericModal__body"
              >
                <div
                  role="application"
                >
                  <div
                    class="filtered-user-list"
                  >
                    <div
                      class="filter-row"
                    >
                      <div
                        class="multi-select__container react-select"
                      >
                        <div
                          class="css-1dedlln"
                          id="selectItems"
                        >
                          <span
                            class="css-1f43avz-a11yText-A11yText"
                            id="react-select-2-live-region"
                          />
                          <span
                            aria-atomic="false"
                            aria-live="polite"
                            aria-relevant="additions text"
                            class="css-1f43avz-a11yText-A11yText"
                            role="log"
                          />
                          <div
                            class="react-select-auto react-select__control css-13cymwt-control"
                          >
                            <div
                              class="react-select-auto react-select__value-container react-select-auto react-select__value-container--is-multi react-select-auto react-select__value-container--has-value css-1dyz3mf"
                            >
                              <div
                                class="react-select-auto react-select__multi-value css-1p3m7a8-multiValue"
                              >
                                <div
                                  class="react-select__padded-component"
                                >
                                  some-user
                                </div>
                                <div
                                  aria-label="Remove some-user"
                                  class="react-select-auto react-select__multi-value__remove css-v7duua"
                                  role="button"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="css-tj5bde-Svg"
                                    focusable="false"
                                    height="14"
                                    viewBox="0 0 20 20"
                                    width="14"
                                  >
                                    <path
                                      d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                                    />
                                  </svg>
                                </div>
                              </div>
                              <div
                                class="react-select-auto react-select__multi-value css-1p3m7a8-multiValue"
                              >
                                <div
                                  class="react-select__padded-component"
                                >
                                  some-user
                                </div>
                                <div
                                  aria-label="Remove some-user"
                                  class="react-select-auto react-select__multi-value__remove css-v7duua"
                                  role="button"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="css-tj5bde-Svg"
                                    focusable="false"
                                    height="14"
                                    viewBox="0 0 20 20"
                                    width="14"
                                  >
                                    <path
                                      d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                                    />
                                  </svg>
                                </div>
                              </div>
                              <div
                                class="react-select-auto react-select__input-container css-19bb58m"
                                data-value=""
                              >
                                <input
                                  aria-activedescendant=""
                                  aria-autocomplete="list"
                                  aria-expanded="false"
                                  aria-haspopup="true"
                                  aria-invalid="false"
                                  aria-label="Search for people"
                                  autocapitalize="none"
                                  autocomplete="off"
                                  autocorrect="off"
                                  class="react-select-auto react-select__input"
                                  id="react-select-2-input"
                                  role="combobox"
                                  spellcheck="false"
                                  style="color: inherit; background: 0px; opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                                  tabindex="0"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                        <button
                          class="btn btn-primary"
                          data-testid="saveSetting"
                          id="saveItems"
                          type="submit"
                        >
                          <span>
                            Go
                          </span>
                        </button>
                      </div>
                      <div
                        class="multi-select__help"
                        id="multiSelectHelpMemberInfo"
                      >
                        Use ↑↓ to browse, ↵ to select. You can add 5 more people. 
                        1 of 3 members
                      </div>
                    </div>
                    <div
                      aria-live="polite"
                      class="multi-select__wrapper"
                    >
                      <div
                        aria-hidden="true"
                      >
                        <div
                          class="loading-screen"
                          style="position: absolute;"
                        >
                          <div
                            class="loading__content"
                          >
                            <p>
                              Loading
                            </p>
                            <div
                              class="round round-1"
                            />
                            <div
                              class="round round-2"
                            />
                            <div
                              class="round round-3"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="multi-select__help"
                      id="multiSelectMessageNote"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
